--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+    <div class="container">
+    <div class="reg">
     <form action="" id="myForm">
-      <div>
-        <input type="text" placeholder="username" id="username" />
+      <h1>REGISTRATSIYA</h1>
+      <div class="inputBorder">
+        <input type="text" placeholder="Username" id="username" />
       </div>
-      <div>
-        <input type="email" placeholder="email" id="email" />
+      <div class="inputBorder">
+        <input type="email" placeholder="Email (@gmail.com)" id="email" />
       </div>
-      <div>
-        <input type="number" placeholder="age" id="age" />
+      <div class="inputBorder">
+        <input type="number" placeholder="Age" id="age" />
       </div>
-      <button>Tasdiqlash</button>
+      <button> <span>Tasdiqlash</span></button>
     </form>
-
-    <div id="ui"></div>
-
+  </div>
+    <span id="ui"></span></span>
+ 
+</div>
     <script src="js/app.js"></script>
   </body>
 </html>
