--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
     <div class="reg">
     <form action="" id="myForm">
       <h1>REGISTRATSIYA</h1>
-      <div class="inputBorder">
-        <input type="text" placeholder="Username" id="username" />
-      </div>
-      <div class="inputBorder">
-        <input type="email" placeholder="Email (@gmail.com)" id="email" />
-      </div>
-      <div class="inputBorder">
-        <input type="number" placeholder="Age" id="age" />
-      </div>
+<div class="input-group">
+  <input required="" type="text" class="input" id="username">
+  <label class="user-label">Username</label>
+</div>
+<div class="input-group">
+  <input required="" type="email" class="input" id="email">
+  <label class="user-label">Email</label>
+</div>
+<div class="input-group">
+  <input required="" type="number" class="input" id="age">
+  <label class="user-label">Age</label>
+</div>
       <button> <span>Tasdiqlash</span></button>
     </form>
   </div>
-    <span id="ui"></span></span>
+    <span id="ui"></span>
  
 </div>
     <script src="js/app.js"></script>
